templates/insurances_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: insurances-v1
spec:
  selector:
    matchLabels:
      app: insurances
      version: v1
  replicas: 3
  template:
    metadata:
      annotations:
        readiness.status.sidecar.istio.io/applicationPorts: ""
        sidecar.istio.io/inject: 'true'
      labels:
        app: insurances
        version: v1
    spec:
      containers:
        - name: insurances
          image: quay.io/kiali/demo_travels_insurances:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          securityContext:
            privileged: false
