templates/db-ds.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: mysqldb
  namespace: travel-agency
  labels:
    kiali_wizard: request_routing
spec:
  host: mysqldb.travel-agency.svc.cluster.local
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
    - labels:
        version: v3
      name: v3
