templates/db-vs.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: mysqldb
  namespace: travel-agency
  labels:
    kiali_wizard: request_routing
spec:
  hosts:
    - mysqldb.travel-agency.svc.cluster.local
  http:
    - route:
        - destination:
            host: mysqldb.travel-agency.svc.cluster.local
            subset: v1
          weight: 100
        - destination:
            host: mysqldb.travel-agency.svc.cluster.local
            subset: v2
          weight: 0
        - destination:
            host: mysqldb.travel-agency.svc.cluster.local
            subset: v3
          weight: 0
