templates/discount-vs.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: discounts
  namespace: travel-agency
  labels:
    kiali_wizard: request_routing
spec:
  hosts:
    - discounts.travel-agency.svc.cluster.local
  http:
    - route:
        - destination:
            host: discounts.travel-agency.svc.cluster.local
            subset: v1
          weight: 100
