templates/flights-vs.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: flights
  namespace: travel-agency
  labels:
    kiali_wizard: request_routing
spec:
  hosts:
    - flights.travel-agency.svc.cluster.local
  http:
    - route:
        - destination:
            host: flights.travel-agency.svc.cluster.local
            subset: v1
          weight: 100
