templates/insurances-ds.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: insurances
  namespace: travel-agency
  labels:
    kiali_wizard: request_routing
spec:
  host: insurances.travel-agency.svc.cluster.local
  subsets:
    - labels:
        version: v1
      name: v1
