templates/insurances-vs.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: insurances
  namespace: travel-agency
  labels:
    kiali_wizard: request_routing
spec:
  hosts:
    - insurances.travel-agency.svc.cluster.local
  http:
    - route:
        - destination:
            host: insurances.travel-agency.svc.cluster.local
            subset: v1
          weight: 100
